# pytutor-llms-suede

./: README.md  TESTING.md  common.py  pyproject.toml  stream.py
.devcontainer/: devcontainer.json
examples/: patch.py  pydantic.ipynb  schema.ipynb  stream.pydantic.py  stream.schema.py  stream.text.py  text.ipynb
providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py
release/: .gitrepo  format.py  utils.py
release/providers/: anthropic.py  base.py  google.py  openai.py  openrouter.py
scripts/: install.sh  run-tests.sh
tests/: conftest.py  test_msg_content.py  test_provider_base.py  test_provider_benchmarks.py  test_providers_specific.py  test_utils.py
