[project]
name = "pytutor-llms-suede"
version = "0.1.0"
description = ""
authors = [
    { name = "Github Action (authored by pmalacho-mit)", email = "pmalacho-mit@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "google-genai (>=1.66.0,<2.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "anthropic (>=0.84.0,<0.85.0)",
    "instructor (>=1.14.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
